# mandarin-webutil

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  README.md  index.html  styles.css
.cargo/: config.toml
assets/dioxus/: mandarin-webutil.js
src/: clipboard.rs  config.rs  input.rs  main.rs  phonetic.rs  stats.rs  words.rs
test_data/: pinyin.lst
