[package]
name = "mandarin-webutil"
version = "0.0.3"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
dioxus = { version = "0.2", features = ["fermi"] }
chinese_dictionary = "2.1"
once_cell = "1"
regex = "1"

[features]
default = ["web"]

web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
