[package]
name = "mandarin-webutil"
version = "0.0.5"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
dioxus = { version = "0.2", features = ["fermi"] }
chinese_dictionary = "2.1"
once_cell = "1"
regex = "1"
# wasm-bindgen = "0.2"
# wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.2", optional = true }
tokio = { version = "1", optional = true }

[features]
default = ["web"]

web = ["dioxus/web", "gloo-timers" ]
desktop = ["dioxus/desktop", "tokio"]
