[package]
name = "mandarin-webutil"
version = "0.0.7"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
dioxus = { version = "0.2", features = [] }
chinese_dictionary = "2.1"
once_cell = "1"
regex = "1"
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4", optional = true }
gloo-timers = { version = "0.2", optional = true }
tokio = { version = "1", optional = true }
web-sys = { version = "0.3", features = [
  "Window", "Document", "Element", "Navigator", "Node", "Clipboard", "ClipboardItem",
  "HtmlTextAreaElement"
  ], optional = true }

[features]
default = ["web"]

web = ["dioxus/web", "gloo-timers", "web-sys", "wasm-bindgen-futures" ]
desktop = ["dioxus/desktop", "tokio"]
